--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 GRAZPEDWRI-DX/data/images/test/*
 GRAZPEDWRI-DX/data/images/train/*
+GRAZPEDWRI-DX/data/images/train_aug/*
 GRAZPEDWRI-DX/data/images/valid/*
 GRAZPEDWRI-DX/data/labels/test/*
 GRAZPEDWRI-DX/data/labels/train/*
+GRAZPEDWRI-DX/data/labels/train_aug/*
 GRAZPEDWRI-DX/data/labels/valid/*
