yolov8 with GAM

--- a/GRAZPEDWRI-DX/data/meta.yaml
+++ b/GRAZPEDWRI-DX/data/meta.yaml
@@ -1,5 +1,5 @@
 # patch: /path/to/GRAZPEDWRI-DX/data
-path: 'C:\Users\XaLyeDaniel\Desktop\STUDY\523\Fracture_Detection\GRAZPEDWRI-DX\data'
+path: '/path/to/GRAZPEDWRI-DX/data'
 train: 'images/train_aug'
 val: 'images/valid'
 test: 'images/test'
